--- a/MaskinportenTokenGetter/MaskinportenTokenGetter.csproj
+++ b/MaskinportenTokenGetter/MaskinportenTokenGetter.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.1" />
+      <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
