--- a/MaskinportenTokenGetter/MaskinportenTokenGetter.csproj
+++ b/MaskinportenTokenGetter/MaskinportenTokenGetter.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="8.0.6" />
+      <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="8.0.6" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
